# FastAPI

./: .dockerignore  .env-prod.semple  .env-semple  Dockerfile  LICENSE  README.MD  activate_env.sh  compose.yml  database.db  pyproject.toml  start.sh
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.secrets/: SECURITY_API_SECRET_KEY
DOCS/: AUTHENTICATION.MD  DEPLOYMENT.md  FLUXOGRAMA.MD  GENERIC-CRUD.MD  PERMISSIONS.MD
app/: startup.py
app/api/assignment/: router.py  schemas.py
app/api/authentication/: controller.py  router.py  schemas.py
app/api/authorization/: controller.py  middleware.py  router.py  schemas.py
app/api/role/: router.py  schemas.py
app/api/transaction/: enum_operation_code.py  router.py  schemas.py
app/api/user/: controller.py  router.py  schemas.py
app/database/: session.py
app/models/: __init__.py  assignment.py  authorization.py  role.py  transaction.py  user.py
app/utils/: base_model.py  base_schemas.py  client_ip.py  exceptions.py  generic_controller.py  logging.py  security.py  settings.py
migrations/: env.py
migrations/versions/: 00292430c7bd_bigbang.py  1d649d8e07e8_add_super_user_seed.py  b8b14b065206_transactions_seed.py
migrations/versions copy/: 030fdfb77648_trasactions_seed.py  c2b10484a584_add_super_user_seed.py
seeds/: seed_super_user.py  seed_transactions.py
tests/: conftest.py  test_assignment.py  test_authentication.py  test_authorization.py  test_role.py  test_startup.py  test_transactions.py  test_users.py
tests/factory/: assignment_factory.py  authorization_factory.py  role_factory.py  trasaction_factory.py  user_factory.py
